--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "lodash": "~2.4.1",
     "ng-ckeditor": "*",
     "ckeditor": "~4.3.3",
-    "angular-sanitize": "~1.2.14"
+    "angular-sanitize": "~1.2.14",
+    "angular-file-upload": "~0.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.13",
